[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/TitleScreen/TitleScreenBackground.png" type="Texture" id=1]
[ext_resource path="res://NiceFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/Pause/Quit.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Credits.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Pause/QuitSelected.png" type="Texture" id=5]
[ext_resource path="res://Sounds/8 Bit Adventure! Querky Fun Chiptune Game Music by HeatleyBros.wav" type="AudioStream" id=6]

[node name="Credits" type="Node2D"]
script = ExtResource( 4 )

[node name="CreditsScreen" type="Sprite" parent="."]
position = Vector2( 380.34, 180.197 )
texture = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 599.395
margin_top = 299.697
margin_right = 799.395
margin_bottom = 361.697
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="Menu"]
margin_right = 200.0
margin_bottom = 62.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 110.003
margin_top = 28.5396
margin_right = 392.003
margin_bottom = 89.5396
custom_fonts/font = ExtResource( 2 )
text = "Music from:
            https://www.youtube.com/user/HeatleyBros

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 109.672
margin_top = 73.933
margin_right = 391.672
margin_bottom = 134.933
custom_fonts/font = ExtResource( 2 )
text = "Sound effects from:
            https://www.zapsplat.com

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 107.672
margin_top = 118.433
margin_right = 389.672
margin_bottom = 179.433
custom_fonts/font = ExtResource( 2 )
text = "Font from:
            Daniel Linssen on itch.io

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 207.835
margin_top = 175.996
margin_right = 489.835
margin_bottom = 236.996
custom_fonts/font = ExtResource( 2 )
text = "Platformer template from:
            suppersaif on itch.io

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 206.944
margin_top = 222.768
margin_right = 488.944
margin_bottom = 283.768
custom_fonts/font = ExtResource( 2 )
text = "Shout Out to:
         UmaiPixel and HeartBeast for the helpful Youtube tutorials.

         All the alphatesters on the CasterGrounds Discord

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
